agregar y quitar tags de un post
