# src/controllers/postController.js
@@ -4,14 +4,14 @@ const { getModelByIdCache, getModelsCache, deleteModelsCache, deleteModelByIdCac
 
 const getPosts = async (_, res) => {
     const cached = await getModelsCache(Post)
-    const posts = cached ? JSON.parse(cached) : await Post.find().populate('comments');
+    const posts = cached ? JSON.parse(cached) : await Post.find().populate({ path:'comments', select: 'userId content fecha -_id'}).populate({ path: 'tags', select: 'tag -_id' }); // Intenta obtener los posts del cache, si no están, los busca en la base de datos
     await redisClient.set('posts:todos', JSON.stringify(posts), { EX: 300 })
     res.status(200).json(posts);
 };
 
 const getPostById = async (req, res) => {
     const cached = await getModelByIdCache(Post, req.params.id)   //Intenta obtener el post del cache
-    const post = cached ? JSON.parse(cached) : await Post.findById(req.params.id).populate('comments').populate('tags');  //Si no está en el cache, lo busca en la base de datos
+    const post = cached ? JSON.parse(cached) : await Post.findById(req.params.id).populate({ path:'comments', select: 'userId content fecha -_id'}).populate({ path: 'tags', select: 'tag -_id' });  //Si no está en el cache, lo busca en la base de datos
     await redisClient.set(`post:${req.params.id}`, JSON.stringify(post), { EX: 300 })  // Guarda el post en el cache con una expiración de 300 segundos
     res.status(200).json(post);
 };
@@ -46,8 +46,10 @@ const actualizarTag = (metodo) => {
     return async (req, res) => {  
             if (metodo == "agregar"){
                 await Post.findByIdAndUpdate(req.params.postId, { $push: { tags: req.params.tagId } }, { new: true });
+                await Tag.findByIdAndUpdate(req.params.tagId, { $push: { posts: req.params.postId } }, { new: true });
             } else {
                 await Post.findByIdAndUpdate(req.params.postId, { $pull: { tags: req.params.tagId } }, { new: true });
+                await Tag.findByIdAndUpdate(req.params.tagId, { $pull: { posts: req.params.postId } }, { new: true });
             }
             await deleteModelByIdCache(Post, req.params.id) 
             await deleteModelsCache(Post)
